// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App visualizations change correctly on example upload 1`] = `
<div
  className="diagram-container"
/>
`;

exports[`App visualizations change correctly on example upload 2`] = `
<div
  className="graph-container"
/>
`;

exports[`App visualizations change correctly on example upload 3`] = `
<div
  className="calculations-container"
>
  <span
    className="value-name"
  >
    Skewness
  </span>
  <span
    className="value"
  />
</div>
`;

exports[`App visualizations change correctly on example upload 4`] = `
<div
  className="calculations-container"
>
  <span
    className="value-name"
  >
    Coefficient
  </span>
  <span
    className="value"
  />
</div>
`;
